[gd_scene load_steps=16 format=3 uid="uid://u2soe1uj7krd"]

[ext_resource type="Texture2D" uid="uid://bdha7jcq2l4hm" path="res://Assets/gray_box.svg" id="1_jfbnm"]
[ext_resource type="Script" path="res://Scenes/Box/box_summon_1.gd" id="1_l25rl"]
[ext_resource type="PackedScene" uid="uid://bsbem8bswoigv" path="res://Scenes/power_core.tscn" id="2_2hajb"]
[ext_resource type="PackedScene" uid="uid://cwhmux7f5qpgq" path="res://Scenes/box_light.tscn" id="3_lrco4"]
[ext_resource type="PackedScene" uid="uid://dp0u3h78lgniu" path="res://Scenes/box_engine.tscn" id="5_ltebl"]
[ext_resource type="Texture2D" uid="uid://bkwdv8qqks6ek" path="res://Assets/vault_pole.png" id="6_6vbo5"]
[ext_resource type="Texture2D" uid="uid://cv6efa8gkm4sr" path="res://Assets/white_ball.svg" id="6_hu0cn"]
[ext_resource type="Texture2D" uid="uid://0vq5o1glemw0" path="res://Assets/vault_brace.png" id="7_fcuwt"]
[ext_resource type="Material" uid="uid://bvnho1y8ff1fe" path="res://Scenes/mask_shader.tres" id="10_kbo1o"]
[ext_resource type="Texture2D" uid="uid://r6fnxsdrej0i" path="res://Assets/kaiju2.png" id="10_m7xq1"]
[ext_resource type="Texture2D" uid="uid://d25hx3gbnbh3g" path="res://Assets/kaiju1.png" id="11_n3y55"]
[ext_resource type="Texture2D" uid="uid://1ecsfdqr0kal" path="res://Assets/kaiju3.png" id="12_s6d62"]
[ext_resource type="AudioStream" uid="uid://dabi0vjbyjdx7" path="res://Sounds/beam_sfx.mp3" id="13_0lt43"]

[sub_resource type="Animation" id="Animation_atiek"]
resource_name = "open_vault"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VaultPole1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -112)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VaultPole2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 16), Vector2(104, 72)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VaultPole3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, 24), Vector2(-88, 88)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hole:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.501961, 0.501961, 0.501961, 1), Color(0.0509804, 0.0509804, 0.0509804, 0.698039)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackBufferCopy/Kaiju:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 3, 3.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-16, 144), Vector2(-16, 64), Vector2(-16, 64), Vector2(0, -120)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BackBufferCopy/Mask:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, 144), Vector2(8, 144), Vector2(8, 208)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BackBufferCopy/Kaiju:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4.9, 6, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BackBufferCopy/Kaiju:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("KaijuStanding:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 7, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("KaijuScreaming:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 7.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("BackBufferCopy2/Beam:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 7.7, 9.9, 12.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(128, 208), Vector2(128, 208), Vector2(8, -368), Vector2(-160, -968)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("BackBufferCopy2/Beam:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(7.7, 9.9, 12.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.980392, 0.670588, 0.894118, 0.623529), Color(0.980392, 0.670588, 0.894118, 0)]
}
tracks/12/type = "audio"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("AudioStreamPlayer")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_0lt43")
}],
"times": PackedFloat32Array(7.7)
}
tracks/12/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyx2c"]
_data = {
"open_vault": SubResource("Animation_atiek")
}

[node name="BoxSummon1" type="Node2D"]
script = ExtResource("1_l25rl")

[node name="Base" type="TextureRect" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_jfbnm")

[node name="PowerCore" parent="." instance=ExtResource("2_2hajb")]
position = Vector2(-96, 88)
scale = Vector2(0.5, 0.5)

[node name="PowerCore2" parent="." instance=ExtResource("2_2hajb")]
position = Vector2(0, -120)
scale = Vector2(0.5, 0.5)

[node name="PowerCore3" parent="." instance=ExtResource("2_2hajb")]
position = Vector2(112, 80)
scale = Vector2(0.5, 0.5)

[node name="BoxLight" parent="." instance=ExtResource("3_lrco4")]
position = Vector2(56, -64)

[node name="Polygon2D" type="Polygon2D" parent="." groups=["is_solid"]]
polygon = PackedVector2Array(-96, -96, 96, 96)

[node name="BoxEngine" parent="." instance=ExtResource("5_ltebl")]

[node name="Hole" type="Sprite2D" parent="."]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
position = Vector2(0, 8)
texture = ExtResource("6_hu0cn")

[node name="VaultPole1" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_6vbo5")

[node name="VaultBrace1" type="Sprite2D" parent="."]
position = Vector2(0, -56)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_fcuwt")

[node name="VaultPole2" type="Sprite2D" parent="."]
position = Vector2(24, 16)
rotation = 2.15978
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_6vbo5")

[node name="VaultBrace2" type="Sprite2D" parent="."]
position = Vector2(56, 40)
rotation = 2.12743
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_fcuwt")

[node name="VaultPole3" type="Sprite2D" parent="."]
position = Vector2(-16, 24)
rotation = -2.255
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_6vbo5")

[node name="VaultBrace3" type="Sprite2D" parent="."]
position = Vector2(-48, 48)
rotation = -2.21429
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_fcuwt")

[node name="VaultAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uyx2c")
}

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
z_index = 999
position = Vector2(-64, -64)

[node name="Beam" type="Sprite2D" parent="BackBufferCopy2"]
position = Vector2(128, 208)
rotation = -0.209678
scale = Vector2(0.623148, 12)
texture = ExtResource("6_hu0cn")

[node name="Mask" type="Sprite2D" parent="BackBufferCopy2"]
material = ExtResource("10_kbo1o")
position = Vector2(168, 208)
rotation = -0.253882
scale = Vector2(7.375, 12.125)
texture = ExtResource("1_jfbnm")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
z_index = 999

[node name="Kaiju" type="Sprite2D" parent="BackBufferCopy"]
position = Vector2(-16, 144)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_m7xq1")

[node name="Mask" type="Sprite2D" parent="BackBufferCopy"]
material = ExtResource("10_kbo1o")
position = Vector2(8, 144)
scale = Vector2(5.25, 4.8125)
texture = ExtResource("1_jfbnm")

[node name="KaijuStanding" type="Sprite2D" parent="."]
visible = false
z_index = 999
position = Vector2(-24, -128)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_n3y55")
flip_h = true

[node name="KaijuScreaming" type="Sprite2D" parent="."]
visible = false
z_index = 999
position = Vector2(24, -112)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_s6d62")
flip_h = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="clicked" from="PowerCore" to="." method="_on_power_core_clicked"]
[connection signal="clicked" from="PowerCore2" to="." method="_on_power_core_clicked"]
[connection signal="clicked" from="PowerCore3" to="." method="_on_power_core_clicked"]
